

1399/01/5 - amirali
modify : "models.py, dashboard.html, base.html, view.py"
- in "moodels.py" :
courses and grades of User class can be null now.
"Meta" class has added to Course and Course_Calendar for ordering
"now" in "is_active_course" and "is_active_class" is calculating in utc now.
__str__ method has added to Course_Calendar
- in 'base.html' :
checks if user's avatar exist shows that, else shows default avatar
- in 'view.py' :
تمام کلاس های یوزر به ترتیب پایان کلاس ها نشون داده میشه و اگه کلاس تموم بشه تایم کلاس آپدیت میشه برای روز بعدی که براش مقرر شده همچنین تقویم متناسب به اولین کلاس پیش روی کاربر تنظیم شده
و فقط یه سری دستورات جاوا اسکریپت میخواد تا کامل بشه
در تایمی که کلاس در حال اجرا شدن است یک مقدار ترو به متغیر مربوطه ارسال میشه تا لینک کلاس فعال بشه


مرج با نسخه امیرعلی
تغییرات من --پاک کردن عکس پروفایل قبلی در صورت جایگزینی ، فارسی سازی ادمین
تغییرات من -تغییر تقویم داشبورد و واگذاری کارهای بک اند تا جای ممکن به js
تغییر صفحه ادمین و افزودن تقویم فارسی
pip install django-jalali-date    #
فارسی سازی تقویم تمام شد

تغییرات اعمالی : انتصاب عکس پروفایل پیش فرض به تفکیک نقش دانش آموز و معلم
گرفتن ارور در صورت نداشت نقش مدرس برای مدرس دوره در ادمین
# سطر روبرو را به جدول accounts_role اضافه کنید {ID=3 , TITLE ='مدرس',CODE='3'}
درلیست مدرس ادمین فقط نقش مدرس می اورد
pip install zeep
pip install requests

//following for async
pip install aiohttp
pip install asyncio
pip install Pillow
راه اندازی سامانهپیامکی


pip install zeep
pip install soap

راه اندازی درگاه بانکی زرین پال
pip install html-json-forms
pip install djangorestframework-simplejwt
pip install django-filter

Advanced Python Scheduler --> document : https://apscheduler.readthedocs.io/en/stable/
pip install apscheduler

--> hint: for start scheduler run server with python manage.py runserver --noreload
    because it run app config twice!


    pip install python-memcached

for htmlfield
pip install django-tinymce

for swagger
pip install -U drf-yasg